test/type-check/should-pass/nop.bril
#To test if nop works.
main {
  nop;
  v: int = const 5;
  nop;
  print v;
  nop;
}
