test/type-check/should-fail/add2.bril
main{

    a: int  = const 1;
    b: bool = const 5;
    c: int = add a 5;
    print c;
}
